fixed close visibility

--- a/app/assets/stylesheets/base/_header.scss
+++ b/app/assets/stylesheets/base/_header.scss
@@ -87,7 +87,7 @@
     font-family: "Trebuchet MS", Tahoma, Arial, sans-serif;
   }
   .close {
-    position: absolute;
+    position: relative;
     width: 20px;
     height: 20px;
     top: 20px;
